[tool.poetry]
name = "utils"
version = "0.1.1"
description = "Utilitários MIIA"
authors = ["Ari Oliveira <ari.oliveira@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/M3-MIIA/utils"
python = "^3.6"

[tool.poetry.dependencies]
python = ">=3.6"
SQLAlchemy = "*"
fastapi = "*"
mangum = "*"
botocore = "*"
async-lru = "*"
dbconn = { git = "https://github.com/M3-MIIA/dbconn.git" }

[tool.poetry.dev-dependencies]
pytest = "*"
