[project]
name = "miia-utils"
version = "1.1.6"
description = "Utilitários MIIA"
readme = "README.md"
authors = [
    { name = "M3-MIIA", email = "ari.oliveira@protonmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "miia-dbconn",
    "fastapi ~= 0.115.14",
    "mangum ~= 0.19.0",
    "PyJWT ~= 2.10.1",
    "python-dotenv ~= 1.1.1",
    "SQLAlchemy ~= 2.0.41",
]

# Dependencies needed at runtime, but that are provided by the default AWS
# lambda Python runtime or other lambda layers:
[project.optional-dependencies]
full = [
    "boto3 ~= 1.39.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv.sources]
miia-dbconn = { git = "https://github.com/M3-MIIA/dbconn.git", rev = "v1.0.5" }

[dependency-groups]
dev = [
  "pytest ~= 8.4.1",
  "pytest-aio ~= 1.9.0",
]
